--- a/src/sim/Makefile.in
+++ b/src/sim/Makefile.in
@@ -32,7 +32,7 @@ SO_LIB_SUFFIX=@SO_LIB_SUFFIX@
 COPTS=$(CFLAGS) -I$(OMNETPP_INCL_DIR) -I. -DBUILDING_SIM $(MPI_CFLAGS) $(PVM_CFLAGS)
 
 CPPOBJS_STD = task.o ccoroutine.o ctypes.o carray.o cgate.o \
-         cmodule.o csimplemodule.o csimul.o cobject.o cpar.o \
+         cmodule.o csimplemodule.o csimul.o cobject.o cvisitor.o cpar.o \
          cstat.o chist.o cdensity.o cvarhist.o cpsquare.o cksplit.o \
          cmessage.o cdetect.o util.o cllist.o ctopo.o errmsg.o \
          cmsgheap.o coutvect.o cqueue.o globals.o cwatch.o \
