*** empty log message ***

--- a/src/gned/Makefile.vc
+++ b/src/gned/Makefile.vc
@@ -91,7 +91,8 @@ ebnf.tab.obj: ebnf.tab.cc \
   nedfile.h
 gned.obj: gned.cc \
   tklib.h \
-  arrow.h
+  arrow.h \
+  tclcode.cc
 lex.yy.obj: lex.yy.cc \
   ebnf.h \
   ebnf.tab.h \
@@ -106,6 +107,7 @@ parsened.obj: parsened.cc \
   nedfile.h \
   tklib.h \
   ebnf.h
+tclcode.obj: tclcode.cc
 tkcmd.obj: tkcmd.cc \
   tklib.h \
   arrow.h \
