*** empty log message ***

--- a/doc/src/manual/Makefile.vc
+++ b/doc/src/manual/Makefile.vc
@@ -32,7 +32,7 @@ usman.html : $(HTM_FILES)
 	@echo. > usman.tmp
 	for %%i in ($(HTM_FILES)) do type %i >> usman.tmp
 	$(PERL) prephtml2 usman.tmp
-	del usman.tmp
+	: del usman.tmp
 
 clean:
 	-del *.htm
