--- a/src/plove/Makefile.vc
+++ b/src/plove/Makefile.vc
@@ -92,7 +92,9 @@ clean:
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 plove.obj: plove.cc \
-  tklib.h
+  tklib.h \
+  tclcode.cc
+tclcode.obj: tclcode.cc
 tkcmd.obj: tkcmd.cc \
   tklib.h \
   engine/node.h \
