--- a/samples/aloha/Makefile.vc
+++ b/samples/aloha/Makefile.vc
@@ -103,4 +103,5 @@ re-makemake:
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 host.obj: host.cpp
+network_n.obj: network_n.cpp
 server.obj: server.cpp
