--- a/samples/tokenring/Makefile.vc
+++ b/samples/tokenring/Makefile.vc
@@ -106,4 +106,8 @@ re-makemake:
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 token.obj: token.cpp \
-  token.h
+  token.h \
+  token_m.h
+token_m.obj: token_m.cpp \
+  token_m.h
+token_n.obj: token_n.cpp
