--- a/samples/routing/Makefile.vc
+++ b/samples/routing/Makefile.vc
@@ -114,5 +114,11 @@ re-makemake:
 	opp_nmakemake -f -f  #recreate Makefile
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
-app.obj: app.cpp
-routing.obj: routing.cpp
+app.obj: app.cpp \
+  packet_m.h
+net60_n.obj: net60_n.cpp
+node_n.obj: node_n.cpp
+packet_m.obj: packet_m.cpp \
+  packet_m.h
+routing.obj: routing.cpp \
+  packet_m.h
