--- a/samples/dyna/.tkenvrc
+++ b/samples/dyna/.tkenvrc
@@ -10,26 +10,32 @@ option senddirect_arrows	{1}
 option anim_methodcalls	{1}
 option methodcalls_delay	{200}
 option animation_msgnames	{1}
+option animation_msgclassnames	{1}
 option animation_msgcolors	{1}
 option penguin_mode	{0}
 option showlayouting	{0}
 option bubbles	{1}
-option animation_speed	{1}
+option animation_speed	{1.94}
 option bkpts_enabled	{1}
+option expressmode_autoupdate	{1}
+config rununtil-event	{}
 config last-nedfile	{}
 config filtobjlist-category	{mqsgvo}
 config filtobjlist-maxcount	{100000}
 config editor-findstring	{}
+config rununtil-time	{}
 config editor-regexp	{0}
 config filtobjlist-class	{}
+config rununtil-mode	{Express (tracing off)}
 config filtobjlist-name	{}
+config confirm-exit	{1}
 config editor-backwards	{1}
 config display-treeview	{1}
 config editor-case-sensitive	{0}
 config editor-whole-words	{0}
 config filtobjlist-order	{Class}
 inspector "dyna.client[2]" "Client" "3" "504x162+13+362"
-inspector "dyna.server" "Server" "3" "502x125+14+556"
 inspector "dyna.client[0]" "Client" "1" "349x240+231+455"
+inspector "dyna.server" "Server" "3" "502x125+14+556"
 inspector "simulation.scheduled-events.CONN_REQ" "cMessage" "1" "349x199+227+432"
 
